# paycheck_waterfall_app

./: .gitignore  .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CODE_AUDIT.md  CONTRIBUTING.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_MAIN.md  cleanup.sh  pyproject.toml  vscode-profile-2025-11-18-11-09-29.cpuprofile  vscode-profile-2025-11-18-11-14-30.heapprofile
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-gh-pages.yml  deploy-webapp.yml  webapp-ci.yml
docs/: ALLOCATION_IMPROVEMENTS.md  ARCHITECTURE.md  BACKEND_ACTION_PLAN.md  HOSTING_OPTIONS.md  ROADMAP.md  UX_DEEP_DIVE_REVIEW.md
docs/archive/: BACKEND_ACTION_PLAN.md  BACKEND_REVIEW.md  CODE_AUDIT.md  CODE_REVIEW_2024.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_2024-11-20.md  IMPLEMENTED_UX_IMPROVEMENTS.md  PRE_DEPLOY_CHECKLIST.md  ROADMAP.md  UX_DEEP_DIVE_REVIEW.md  UX_IMPROVEMENTS_COMPLETED.md  UX_REVIEW_2024.md
scripts/: allocate_example.py
src/paycheck_waterfall/: __init__.py  allocations.py
tests/: conftest.py  test_allocations.py  test_allocations_edgecases.py
webapp/: .env.example  .eslintrc.cjs  .gitignore  INSTALL_TESTING.md  README.md  TEST_GUIDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
webapp/e2e/: keyboard-navigation.spec.ts  mobile-responsive.spec.ts  settings-persistence.spec.ts  (+1 more)
(+39 files in other folders)
